<resources>
    <string name="app_name">设备管理系统</string>
    <string name="operator">北京银河灵动科技有限公司</string>
    <string name="manufacturer">山西华圣铝业有限公司</string>

    <!-- Strings related to login -->
    <string name="prompt_address">工厂</string>
    <string name="prompt_user">用户</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_logout">注销</string>
    <string name="contact_us">联系我们</string>
    <string name="about_us">关于我们</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_user">用户名无效</string>
    <string name="error_invalid_password">密码不能为空</string>
    <string name="error_field_required">必填项</string>
    <string name="error_too_long">太长了</string>

    <string name="failure_get">获取内容失败</string>
    <string name="failure_get_device">没有该设备的记录</string>
    <string name="failure_login">登录失败</string>
    <string name="failure_data_parse">没有查询到相关的信息或数据</string>
    <string name="failure_network">网络不可用，请检查网络设置</string>
    <string name="failure_request">请求错误，请查看手机网络或服务器状态</string>
    <string name="failure_camera_permission">没有授权，无法使用照相机</string>
    <string name="failure_click">请扫描对应设备条码进行点检</string>
    <string name="failure_save_inspect">该设备已经完成了点检，请勿重复提交</string>
    <string name="failure_assign">只能派工给一个维修工程师</string>

    <string name="hint_parts_count">最多只能添加10个。</string>
    <string name="hint_image_count">只能添加6张照片。</string>
    <string name="hint_is_exist">已经添加过了。</string>
    <string name="hint_device_save_success">设备保存成功。</string>
    <string name="hint_report_fault_success">故障上报成功。</string>
    <string name="hint_select_a_device">请选择一个设备</string>
    <string name="hint_error_time">时间错误</string>

    <string name="title_home">首页</string>
    <string name="title_device">设备</string>
    <string name="title_parts">备件</string>
    <string name="title_person">我的</string>
    <string name="action_scan">扫描</string>
    <string name="action_ask_repair">故障报修</string>
    <string name="action_wait_audit">故障审核</string>
    <string name="action_wait_assign">维修派工</string>
    <string name="action_wait_validate">维修验证</string>
    <string name="action_add_device">添加设备</string>
    <string name="action_add_repair">填写工单</string>
    <string name="action_ask_parts">申请备件</string>
    <string name="action_save_device">保存</string>
    <string name="action_repair_submit">提交验收</string>
    <string name="action_repair_add">提交</string>

    <string name="action_i_repair_it">抢单，我来维修</string>
    <string name="action_i_not_repair">撤单，我不修了</string>
    <string name="action_validate_repair">验收</string>
    <string name="action_audit_repair">审核</string>
    <string name="action_assign_repair">派工</string>
    <string name="action_start_repair">开始维修</string>
    <string name="action_finish_repair">完成维修</string>
    <string name="action_repair_add_workload">添加人员工时</string>
    <string name="action_repair_add_maintainer">添加维修人员</string>
    <string name="action_repair_add_parts">添加所需的配件</string>

    <string name="hint_catch_repair_success">抢单成功</string>
    <string name="hint_give_up_repair_success">你放弃了该工单</string>
    <string name="hint_finish_repair_success">提交成功</string>
    <string name="hint_upload_success">上传成功</string>
    <string name="hint_finish_validate_success">验收完成</string>
    <string name="hint_finish_assign_success">派工成功</string>
    <string name="hint_finish_audit_success">审批完成</string>
    <string name="hint_change_passwd_success">密码修改成功</string>

    <string name="title_scan_device">扫描设备条码</string>
    <string name="title_device_info">设备信息</string>
    <string name="title_device_detail">设备详情</string>
    <string name="title_device_parts">关联备件</string>
    <string name="title_device_repair_record">维修记录</string>
    <string name="title_device_add_record">添加维修记录</string>
    <string name="title_device_maintain_record">润滑记录</string>
    <string name="title_device_check_record">点检记录</string>
    <string name="title_repair_order">维修工单</string>
    <string name="title_select_device">选择设备</string>
    <string name="title_select_parts">选择备件</string>
    <string name="title_select_maintainer">选择维修人员</string>
    <string name="title_inspect_devices">点检设备列表</string>
    <string name="title_inspect_detail">设备点检项</string>
    <string name="title_maintain_task">润滑任务列表</string>
    <string name="title_maintain_detail">润滑任务</string>
    <string name="title_change_passwd">修改密码</string>
    <string name="title_qrcode_gen">生成二维码</string>
    <string name="title_trouble_audit">故障审核</string>


    <string name="title_repair_info">故障信息</string>
    <string name="title_repair_advice">处理意见</string>
    <string name="title_repair_workload">工作量</string>
    <string name="title_repair_parts">更换配件</string>
    <string name="title_repair_validate">验收工单</string>
    <string name="title_parts_info">备件信息</string>
    <string name="title_audit_advice">审核结果</string>
    <string name="title_audit_desc">审核意见</string>

    <string name="text_repair_wait_audit">待审核工单</string>
    <string name="text_repair_wait_exec">待维修工单</string>
    <string name="text_repair_executing">维修中工单</string>
    <string name="text_repair_wait_verify">待验收工单</string>
    <string name="text_repair_wait_assign">待派工工单</string>

    <string name="code_rule_hint">不填写则自动编号</string>
    <string name="text_device_name">设备名称：</string>
    <string name="text_device_code">设备编号：</string>
    <string name="text_device_type">设备型号：</string>
    <string name="text_device_category">设备类别：</string>
    <string name="text_device_identify">设备标识：</string>
    <string name="text_device_using_dept">使用部门：</string>
    <string name="text_device_buy_date">购买时间：</string>
    <string name="text_device_manufacturer">生产厂商：</string>
    <string name="text_device_provider">供应商：</string>
    <string name="text_device_fault_time">填单时间：</string>
    <string name="text_device_fault_level">故障紧急程度：</string>
    <string name="text_device_fault_reason">故障原因：</string>
    <string name="text_device_fault_type">故障描述：</string>
    <string name="text_device_repair_group">维修班组：</string>
    <string name="text_device_status">设备状态：</string>
    <string name="text_device_running_status">设备运行状态：</string>
    <string name="text_device_operator">设备操作人：</string>
    <string name="text_device_operator_phone">操作人电话：</string>
    <string name="text_device_using_place">设备位置：</string>
    <string name="text_device_repair_submitter">报修人：</string>
    <string name="text_device_fault_desc">故障备注：</string>
    <string name="text_device_desc">设备备注：</string>
    <string name="text_repair_no">维修工单号：</string>
    <string name="text_maintainer">接单侠：</string>
    <string name="text_repair_status">维修状态：</string>
    <string name="text_repair_level">维修级别：</string>
    <string name="text_is_stop_repair">是否需要停机：</string>
    <string name="text_stop_time">停机时长(时)：</string>
    <string name="text_repair_cost">维修费用(元)：</string>
    <string name="text_repair_desc">维修工作描述：</string>
    <string name="text_repair_start_time">开始时间：</string>
    <string name="text_repair_finish_time">完成时间：</string>
    <string name="text_repair_total_time">维修用时：</string>
    <string name="text_number">数量：</string>

    <string name="loading_login">登录中</string>
    <string name="loading_loading">加载中</string>
    <string name="loading_save">保存中</string>
    <string name="loading_report">故障上报中</string>
    <string name="hint">请注意</string>
    <string name="submit_hint_1">未填写备件更换信息！</string>
    <string name="submit_positive_1">没有更换备件</string>
    <string name="submit_hint_2">未填写工作量，工时统计将会少于实际工作时间</string>
    <string name="submit_positive_2">继续提交</string>
    <string name="submit_negative">返回填写</string>

</resources>
