<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="6dp">
        <TextView
                android:text="@string/text_repair_start_time"
                android:layout_width="120dp"
                android:layout_height="wrap_content" android:id="@+id/textView88"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_starttime"
                android:drawableEnd="@drawable/ic_device_info" android:background="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="6dp">
        <TextView
                android:text="@string/text_repair_finish_time"
                android:layout_width="120dp"
                android:layout_height="wrap_content" android:id="@+id/textView89"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_endtime" android:layout_weight="1"
                android:drawableEnd="@drawable/ic_device_info" android:background="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="6dp">
        <TextView
                android:text="@string/text_repair_total_time"
                android:layout_width="120dp"
                android:layout_height="wrap_content" android:id="@+id/textView83"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_worktime" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
