<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@android:color/background_light">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" android:padding="4dp">
        <TextView
                android:text="选择设备"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/b_select_device"
                android:textColor="@color/colorHighlight" android:layout_weight="1"
                android:background="?android:attr/colorBackground" android:textSize="20sp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_scan"
                android:id="@+id/iv_select_device"
                android:padding="4dp"/>
    </LinearLayout>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="gone" android:id="@+id/tl_select_device">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/text_device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView36" android:padding="4dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_device_name" android:layout_weight="1"
                    android:textAlignment="center"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/text_device_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView39" android:padding="4dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_device_code" android:layout_weight="1"
                    android:textAlignment="center"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/text_device_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView40" android:padding="4dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_device_type"
                    android:textAlignment="center" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/text_device_using_dept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView52" android:padding="4dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_device_using_dept"
                    android:textAlignment="center" android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
