<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="tech.yozo.factoryrp.ui.DeviceAddActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:orientation="vertical">
            <TextView
                    android:text="@string/text_device_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_alignBaseline="@+id/editText" android:layout_alignBottom="@+id/editText"
                    android:layout_alignParentStart="true" android:layout_marginStart="12dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText" android:layout_alignParentTop="true"
                    android:layout_marginTop="4dp" android:layout_toStartOf="@+id/imageView8"
                    android:layout_marginRight="4dp" android:hint="不填写则自动编号"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_scan"
                    android:id="@+id/imageView8" android:layout_alignTop="@+id/editText"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@+id/editText" android:layout_marginRight="4dp" android:padding="4dp"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/editText" android:id="@+id/imageView9"
                    android:layout_alignParentEnd="true" android:layout_marginTop="2dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:layout_below="@+id/imageView9" android:layout_alignEnd="@+id/imageView8"
                    android:layout_marginTop="2dp" android:id="@+id/editText3"/>
            <TextView
                    android:text="@string/text_device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6" android:layout_alignBaseline="@+id/editText3"
                    android:layout_alignBottom="@+id/editText3" android:layout_alignStart="@+id/textView5"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/editText3" android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp" android:id="@+id/imageView11"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:layout_below="@+id/imageView11" android:layout_alignEnd="@+id/editText3"
                    android:layout_marginTop="2dp" android:id="@+id/editText2"/>
            <TextView
                    android:text="@string/text_device_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" android:layout_alignBaseline="@+id/editText2"
                    android:layout_alignBottom="@+id/editText2" android:layout_alignStart="@+id/textView6"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/editText2" android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp" android:id="@+id/imageView12"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_below="@+id/imageView12"
                    android:layout_alignEnd="@+id/editText2" android:layout_marginTop="2dp" android:id="@+id/spinner"
                    android:layout_alignStart="@+id/editText2" android:entries="@array/device_type"/>
            <TextView
                    android:text="@string/text_device_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:layout_alignBottom="@+id/spinner" android:layout_alignStart="@+id/textView7"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/spinner" android:layout_alignParentEnd="true"
                    android:id="@+id/imageView13" android:layout_marginTop="6dp"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_below="@+id/imageView13"
                    android:layout_alignEnd="@+id/spinner" android:id="@+id/spinner2"
                    android:layout_alignStart="@+id/editText2" android:layout_marginTop="2dp"
                    android:entries="@array/device_indentify"/>
            <TextView
                    android:text="@string/text_device_identify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:layout_alignBottom="@+id/spinner2" android:layout_alignStart="@+id/textView8"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/spinner2" android:layout_alignParentEnd="true"
                    android:layout_marginTop="6dp" android:id="@+id/imageView14"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_below="@+id/imageView14"
                    android:layout_alignEnd="@+id/spinner2" android:layout_marginTop="2dp" android:id="@+id/spinner3"
                    android:layout_alignStart="@+id/editText2" android:entries="@array/device_using_status"/>
            <TextView
                    android:text="@string/text_device_using_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_alignBottom="@+id/spinner3"
                    android:layout_alignStart="@+id/textView9" android:id="@+id/textView12"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/spinner3" android:layout_alignParentEnd="true"
                    android:layout_marginTop="6dp" android:id="@+id/imageView15"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_below="@+id/imageView15"
                    android:layout_alignEnd="@+id/spinner3" android:layout_marginTop="2dp" android:id="@+id/spinner4"
                    android:layout_alignStart="@+id/editText2" android:entries="@array/device_using_dept"/>
            <TextView
                    android:text="@string/text_device_using_dept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_alignBottom="@+id/spinner4"
                    android:layout_alignStart="@+id/textView12" android:id="@+id/textView13"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/spinner4" android:layout_alignParentEnd="true"
                    android:id="@+id/imageView16" android:layout_marginTop="2dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:layout_below="@+id/imageView16" android:layout_alignEnd="@+id/spinner4"
                    android:layout_marginTop="2dp" android:id="@+id/editText4"/>
            <TextView
                    android:text="@string/text_device_using_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14" android:layout_alignBaseline="@+id/editText4"
                    android:layout_alignBottom="@+id/editText4" android:layout_alignStart="@+id/textView13"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/editText4" android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp" android:id="@+id/imageView17"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:layout_below="@+id/imageView17" android:layout_alignEnd="@+id/editText4"
                    android:layout_marginTop="2dp" android:id="@+id/editText5"/>
            <TextView
                    android:text="@string/text_device_operator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15" android:layout_alignBaseline="@+id/editText5"
                    android:layout_alignBottom="@+id/editText5" android:layout_alignStart="@+id/textView14"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/editText5" android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp" android:id="@+id/imageView18"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:layout_below="@+id/imageView18" android:layout_alignEnd="@+id/editText5"
                    android:layout_marginTop="2dp" android:id="@+id/editText6"/>
            <TextView
                    android:text="@string/text_device_manufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16" android:layout_alignBaseline="@+id/editText6"
                    android:layout_alignBottom="@+id/editText6" android:layout_alignStart="@+id/textView15"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/editText6" android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp" android:id="@+id/imageView19"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:layout_below="@+id/imageView19" android:layout_alignEnd="@+id/editText6"
                    android:layout_marginTop="2dp" android:id="@+id/editText7"/>
            <TextView
                    android:text="@string/text_device_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17" android:layout_alignBaseline="@+id/editText7"
                    android:layout_alignBottom="@+id/editText7" android:layout_alignStart="@+id/textView16"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" app:srcCompat="@color/colorBackground"
                    android:layout_below="@+id/editText7" android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp" android:id="@+id/imageView20"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="12"
                    android:layout_below="@+id/imageView20" android:layout_alignEnd="@+id/editText7"
                    android:layout_marginTop="2dp" android:id="@+id/editText8" android:minLines="2"/>
            <TextView
                    android:text="@string/text_device_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView32" android:layout_alignBaseline="@+id/editText8"
                    android:layout_alignBottom="@+id/editText8" android:layout_alignStart="@+id/textView17"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
